--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
     "clipboardy": "^4.0.0",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
+    "date-fns": "^3.6.0",
     "fs": "^0.0.1-security",
     "puppeteer": "^13.7.0"
-  }
+  },
+  "name": "outlookscript",
+  "description": "Outlook Script",
+  "version": "1.0.0",
+  "main": "outlookScript.js",
+  "scripts": {
+    "start": "outlookScript.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
