multiple pages handling/doesnt work though

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "csv-writer": "^1.6.0",
     "date-fns": "^3.6.0",
     "fs": "^0.0.1-security",
-    "puppeteer": "^13.7.0"
+    "puppeteer": "^13.7.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "name": "outlookscript",
   "description": "Outlook Script",
